# BD

./: CMakeLists.txt
View/: applicantstableform.cpp  applicantstableform.h  applicantstableform.ui  facultydelegate.cpp  facultydelegate.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  paymentstableform.cpp  paymentstableform.h  paymentstableform.ui  posttableform.cpp  posttableform.h  posttableform.ui  studentslistform.cpp  studentslistform.h  studentslistform.ui  workerstableform.cpp  workerstableform.h  workerstableform.ui
